[package]
name = "wasm-shared-mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
regex = "1.10.2"
walrus = "0.20.1"
